--- a/FitnessTrackerBot/FitnessTrackerBot.csproj
+++ b/FitnessTrackerBot/FitnessTrackerBot.csproj
@@ -7,4 +7,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-02450" />
+    <PackageReference Include="DSharpPlus.Commands" Version="5.0.0-nightly-02450" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-02450" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-02450" />
+    <PackageReference Include="DSharpPlus.Lavalink" Version="5.0.0-nightly-02450" />
+    <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-02450" />
+    <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-02450" />
+    <PackageReference Include="DSharpPlus.VoiceNext" Version="5.0.0-nightly-02450" />
+  </ItemGroup>
+
 </Project>
