--- a/FitnessTrackerBot/test/FitnessTrackerBotTests/FitnessTrackerBotTests.csproj
+++ b/FitnessTrackerBot/test/FitnessTrackerBotTests/FitnessTrackerBotTests.csproj
@@ -16,4 +16,8 @@
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\FitnessTrackerBot.csproj" />
+  </ItemGroup>
+
 </Project>
