--- a/FitnessTrackerBot/src/FitnessTrackerBot.csproj
+++ b/FitnessTrackerBot/src/FitnessTrackerBot.csproj
@@ -19,6 +19,8 @@
     <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-02450" />
     <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-02450" />
     <PackageReference Include="DSharpPlus.VoiceNext" Version="5.0.0-nightly-02450" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.1" />
   </ItemGroup>
 
 </Project>
