--- a/FitnessTrackerBot/src/FitnessTrackerBot.csproj
+++ b/FitnessTrackerBot/src/FitnessTrackerBot.csproj
@@ -23,4 +23,10 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
