Add weekly schedule

--- a/FitnessTrackerBot/src/FitnessTrackerBot.csproj
+++ b/FitnessTrackerBot/src/FitnessTrackerBot.csproj
@@ -29,4 +29,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="FitnessTrackerBotTests" />
+  </ItemGroup>
+
 </Project>
