--- a/.editorconfig
+++ b/.editorconfig
@@ -373,6 +373,8 @@ dotnet_diagnostic.CA1502.severity = none	#CA1502:  Avoid excessive complexity (c
 dotnet_diagnostic.CA1505.severity = none	#CA1505:  Avoid unmaintanable code
 dotnet_diagnostic.CA1506.severity = none	#CA1506:  Avoid class coupling
 
+dotnet_diagnostic.CA1515.severity = none   #CA1515:  Make classes internal   
+
 dotnet_diagnostic.CA1707.severity = none	#CA1707:  Identifiers should not contain underscores
 dotnet_diagnostic.CA1709.severity = none	#CA1709:  identifiers should be cased correctly
 dotnet_diagnostic.CA1710.severity = none	#CA1710:  identifiers should be cased correctly?
